test/files/pos/bug4737/J_1.java
package j;

public class J_1 {
    protected class JavaInnerClass {
    }
    public void method(JavaInnerClass javaInnerclass) {
        System.out.println("hello");
    }
}
