test/files/neg/t2296b/J_1.java
package j;

public class J_1 {
  protected void foo() {
    System.out.println("J.foo()");
  }
}